<resources>
    <string name="app_name">PREMIUM WATCH</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_using_premium_watch_you_agree_to_the">By using PREMIUM WATCH, you agree to the</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="sign_up2">Sign Up</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">LogOut</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>